confirmarDados.html e escolhaAreaEmpresa.html

--- a/aluno.html
+++ b/aluno.html
@@ -39,11 +39,13 @@
 
     <!-- Lista de pedidos -->
     <section class="pedidos-container">
-      <article class="pedido-card">
-        <h3 class="pedido-titulo">Pedido de estágio - 1</h3>
-        <p class="pedido-label">Estado do estágio</p>
-        <p class="pedido-estado aguardando">Aguardar resposta</p>
-      </article>
+      <a href="confirmarDados.html">
+        <article class="pedido-card">
+          <h3 class="pedido-titulo">Pedido de estágio - 1</h3>
+          <p class="pedido-label">Estado do estágio</p>
+          <p class="pedido-estado aguardando">Aguardar resposta</p>
+        </article>
+      </a>
 
       <!-- duplica <article> para mais pedidos -->
     </section>
