--- a/confirmarDados.html
+++ b/confirmarDados.html
@@ -11,7 +11,7 @@
   <!-- ======= CABEÇALHO ======= -->
   <header id="header">
     <div class="header-logo">
-      <img src="img/Logo.jpg" alt="Gestão de Estágios Universitários">
+      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
     </div>
 
     <nav class="nav-menu">
@@ -32,7 +32,7 @@
     <!-- Tabs (fases) -->
     <nav class="steps">
       <a class="step active" href="confirmarDados.html">Confirmar Dados</a>
-      <a class="step" href="#">Escolha de área e empresa</a>
+      <a class="step" href="escolhaAreaEmpresa.html">Escolha de área e empresa</a>
       <a class="step" href="#">Envio de email</a>
       <a class="step" href="#">Resposta ao email</a>
       <a class="step" href="#">Plano estágio</a>
@@ -110,7 +110,7 @@
     </div>
 
     <div class="logos">
-      <img src="img/Logo.jpg" alt="Gestão de Estágios Universitários">
+      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
       <img src="img/img_confinanciado.png" alt="Confinanciado">
     </div>
   </footer>
