Começo do modulo de alunos

--- a/confirmarDados.html
+++ b/confirmarDados.html
@@ -36,7 +36,7 @@
       <a class="step" href="envioEmail.html">Envio de email</a>
       <a class="step" href="respostaEmail.html">Resposta ao email</a>
       <a class="step" href="planoEstagio.html">Plano estágio</a>
-      <a class="step" href="#">Avaliação</a>
+      <a class="step" href="avaliacao.html">Avaliação</a>
     </nav>
 
     <!-- Barra superior com título e ações -->
