Continuação dos alunos com o ver alunos e o registar um novo aluno

--- a/alunos/index.html
+++ b/alunos/index.html
@@ -34,7 +34,7 @@
 
         <!-- Tabs internas (Ver / Registar) -->
         <nav class="subtabs">
-            <a href="verAlunos.html" class="subtab-link active">Ver Alunos</a>
+            <a href="" class="subtab-link active">Ver Alunos</a>
             <a href="registarAluno.html" class="subtab-link">Registar novo aluno</a>
         </nav>
 
