Continuação dos alunos (ver aluno(s), editar e registar)

--- a/alunos/index.html
+++ b/alunos/index.html
@@ -63,13 +63,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr onclick="window.location='verAluno.html'" class="linha-click">
                         <td>240001087</td>
                         <td>Rodrigo Da Silva Branco</td>
                         <td>Técnico Superior de Programação de Sistemas de Informação</td>
                         <td>Sem empresa</td>
                         <td>Esperando empresa</td>
                     </tr>
+
                     <tr>
                         <td>240001462</td>
                         <td>Tomás Cordeiro Ribeiro</td>
