--- a/respostaEmail.html
+++ b/respostaEmail.html
@@ -44,7 +44,7 @@
       <h1 class="titulo">Rodrigo Branco - 240001087</h1>
       <div class="acoes">
         <a class="btn-outline" href="envioEmail.html">Voltar</a>
-        <a class="btn-primary" href="envioEmail.html">Guardar resposta ao email</a>
+        <a class="btn-primary" href="planoEstagio.html">Guardar resposta ao email</a>
       </div>
     </div>
 
