--- a/escolhaAreaEmpresa.html
+++ b/escolhaAreaEmpresa.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GEU — Pedido de estágio: escolha área e empresa</title>
-  <link rel="stylesheet" href="css/escolhaAreaEmpresa.css"/>
+  <link rel="stylesheet" href="css/escolhaAreaEmpresa.css" />
 </head>
+
 <body>
 
-  <!-- ======= CABEÇALHO ======= -->
-  <header id="header">
-    <div class="header-logo">
-      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
-    </div>
+  <!-- Cabeçalho -->
+    <header id="header">
+        <div class="header-logo">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            </a>
+        </div>
 
-    <nav class="nav-menu">
-      <a href="#" class="nav-link">Alunos</a>
-      <a href="#" class="nav-link">Professores</a>
-      <a href="#" class="nav-link">Empresas</a>
-      <a href="index.html" class="nav-link active">Turmas</a>
-      <button class="btn-conta">
-        <img src="img/img_conta.png" alt="Conta">
-      </button>
-      <a href="login.html" class="btn-sair">Sair</a>
-    </nav>
-  </header>
+        <nav class="nav-menu">
+            <a href="#" class="nav-link">Alunos</a>
+            <a href="#" class="nav-link">Professores</a>
+            <a href="#" class="nav-link">Empresas</a>
+            <a href="index.html" class="nav-link active">Turmas</a>
+            <button class="btn-conta">
+                <img src="img/img_conta.png" alt="Conta">
+            </button>
+            <a href="login.html" class="btn-sair">Sair</a>
+        </nav>
+    </header>
 
   <!-- ======= CONTEÚDO ======= -->
   <main id="main-content">
 
-    <!-- Abas (iguais a confirmarDados) -->
+    <!-- Abas -->
     <nav class="steps">
       <a class="step" href="confirmarDados.html">Confirmar Dados</a>
       <a class="step active" href="escolhaAreaEmpresa.html">Escolha de área e empresa</a>
@@ -102,12 +106,21 @@
   </main>
 
   <!-- ======= RODAPÉ ======= -->
-  <footer id="footer"> 
+  <footer id="footer">
     <div class="contactos">
       <h3>Contactos</h3>
-      <p><img src="img/img_email.png" alt="Email"><strong>Email:</strong> geral@ipsantarem.pt</p>
-      <p><img src="img/img_telemovel.png" alt="Telefone"><strong>Telefone:</strong> +351 243 309 520</p>
-      <p><img src="img/img_localizacao.png" alt="Endereço"><strong>Endereço:</strong> Complexo Andaluz, Apartado 279, 2001-904 Santarém</p>
+      <p>
+        <img src="img/img_email.png" alt="Email">
+        <strong>Email:</strong> geral@ipsantarem.pt
+      </p>
+      <p>
+        <img src="img/img_telemovel.png" alt="Telefone">
+        <strong>Telefone:</strong> +351 243 309 520
+      </p>
+      <p>
+        <img src="img/img_localizacao.png" alt="Endereço">
+        <strong>Endereço:</strong> Complexo Andaluz, Apartado 279, 2001-904 Santarém
+      </p>
     </div>
 
     <div class="logos">
@@ -117,4 +130,5 @@
   </footer>
 
 </body>
+
 </html>
