--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <!-- Cabeçalho -->
     <header id="header">
         <div class="header-logo">
-            <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            </a>
         </div>
 
         <nav class="nav-menu">
-            <a href="alunos/index.html" class="nav-link">Alunos</a>
+            <a href="#" class="nav-link">Alunos</a>
             <a href="#" class="nav-link">Professores</a>
             <a href="#" class="nav-link">Empresas</a>
-            <a href="#" class="nav-link active">Turmas</a>
+            <a href="index.html" class="nav-link active">Turmas</a>
             <button class="btn-conta">
-                <img src="img/img_conta.png" alt="Descrição da imagem">
+                <img src="img/img_conta.png" alt="Conta">
             </button>
             <a href="login.html" class="btn-sair">Sair</a>
         </nav>
     </header>
-
-    <hr>
 
     <!-- Conteúdo principal -->
     <main id="main-content">
@@ -48,6 +48,40 @@
         </div>
 
     </main>
+
+    <!-- MODAL CRIAR TURMA -->
+    <div id="modal-criar-turma" class="modal-overlay" style="display:none;">
+        <div class="modal-content-box">
+
+            <div class="modal-flex">
+
+                <form class="modal-form">
+                    <label>Código Turma:</label>
+                    <input type="text">
+
+                    <label>Turma:</label>
+                    <input type="text">
+
+                    <label>Ano curricular:</label>
+                    <input type="text">
+
+                    <label>Código professor:</label>
+                    <input type="text">
+
+                    <label>Professor orientador:</label>
+                    <input type="text">
+                </form>
+
+                <img class="modal-img" src="img/img_editar_turma.png" alt="">
+            </div>
+
+            <div class="modal-buttons">
+                <button class="modal-btn criar">Criar</button>
+                <button class="modal-btn voltar" id="btn-fechar-modal">Voltar</button>
+            </div>
+
+        </div>
+    </div>
 
     <hr>
 
@@ -75,6 +109,7 @@
         </div>
     </footer>
 
+    <script src="js/index.js"></script>
 </body>
 
 </html>
