--- a/respostaEmail.html
+++ b/respostaEmail.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GEU — Pedido de estágio: Resposta Email</title>
-  <link rel="stylesheet" href="css/respostaEmail.css"/>
+  <link rel="stylesheet" href="css/respostaEmail.css" />
 </head>
+
 <body>
 
-  <!-- ======= CABEÇALHO ======= -->
-  <header id="header">
-    <div class="header-logo">
-      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
-    </div>
+ <!-- Cabeçalho -->
+    <header id="header">
+        <div class="header-logo">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            </a>
+        </div>
 
-    <nav class="nav-menu">
-      <a href="#" class="nav-link">Alunos</a>
-      <a href="#" class="nav-link">Professores</a>
-      <a href="#" class="nav-link">Empresas</a>
-      <a href="index.html" class="nav-link active">Turmas</a>
-      <button class="btn-conta">
-        <img src="img/img_conta.png" alt="Conta">
-      </button>
-      <a href="login.html" class="btn-sair">Sair</a>
-    </nav>
-  </header>
+        <nav class="nav-menu">
+            <a href="#" class="nav-link">Alunos</a>
+            <a href="#" class="nav-link">Professores</a>
+            <a href="#" class="nav-link">Empresas</a>
+            <a href="index.html" class="nav-link active">Turmas</a>
+            <button class="btn-conta">
+                <img src="img/img_conta.png" alt="Conta">
+            </button>
+            <a href="login.html" class="btn-sair">Sair</a>
+        </nav>
+    </header>
 
   <!-- ======= CONTEÚDO ======= -->
   <main id="main-content">
 
-    <!-- Abas (iguais a confirmarDados) -->
+    <!-- Abas -->
     <nav class="steps">
       <a class="step" href="confirmarDados.html">Confirmar Dados</a>
       <a class="step" href="escolhaAreaEmpresa.html">Escolha de área e empresa</a>
@@ -52,28 +56,28 @@
     <section class="card">
       <ul class="kv">
         <li>
-        <span class="k">Número de pedido de estágio:</span>
-        <input class="v" value="2400010871" readonly>
+          <span class="k">Número de pedido de estágio:</span>
+          <input class="v" value="2400010871" readonly>
         </li>
 
         <li>
-        <span class="k">Código empresa:</span>
-        <input class="v" value="90012111" readonly>
+          <span class="k">Código empresa:</span>
+          <input class="v" value="90012111" readonly>
         </li>
 
         <li>
-        <span class="k">Nome empresa:</span>
-        <input class="v" value="Web Teq" readonly>
+          <span class="k">Nome empresa:</span>
+          <input class="v" value="Web Teq" readonly>
         </li>
 
         <li>
-        <span class="k">Email:</span>
-        <input class="v" value="webteq@gmail.com" readonly>
+          <span class="k">Email:</span>
+          <input class="v" value="webteq@gmail.com" readonly>
         </li>
 
         <li>
-        <span class="k">Nome do responsável da empresa:</span>
-        <input class="v" value="Rui Alves" readonly>
+          <span class="k">Nome do responsável da empresa:</span>
+          <input class="v" value="Rui Alves" readonly>
         </li>
 
         <li>
@@ -92,12 +96,13 @@
   </main>
 
   <!-- ======= RODAPÉ ======= -->
-  <footer id="footer"> 
+  <footer id="footer">
     <div class="contactos">
       <h3>Contactos</h3>
       <p><img src="img/img_email.png" alt="Email"><strong>Email:</strong> geral@ipsantarem.pt</p>
       <p><img src="img/img_telemovel.png" alt="Telefone"><strong>Telefone:</strong> +351 243 309 520</p>
-      <p><img src="img/img_localizacao.png" alt="Endereço"><strong>Endereço:</strong> Complexo Andaluz, Apartado 279, 2001-904 Santarém</p>
+      <p><img src="img/img_localizacao.png" alt="Endereço"><strong>Endereço:</strong> Complexo Andaluz, Apartado 279,
+        2001-904 Santarém</p>
     </div>
 
     <div class="logos">
@@ -107,4 +112,5 @@
   </footer>
 
 </body>
+
 </html>
