--- a/aluno.html
+++ b/aluno.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GEU — Estágios do aluno</title>
-  <link rel="stylesheet" href="css/aluno.css"/>
+  <link rel="stylesheet" href="css/aluno.css" />
 </head>
+
 <body>
 
-  <!-- ======= CABEÇALHO ======= -->
-  <header id="header">
-    <div class="header-logo">
-      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
-    </div>
+  <!-- Cabeçalho -->
+    <header id="header">
+        <div class="header-logo">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            </a>
+        </div>
 
-    <nav class="nav-menu">
-      <a href="#" class="nav-link">Alunos</a>
-      <a href="#" class="nav-link">Professores</a>
-      <a href="#" class="nav-link">Empresas</a>
-      <a href="index.html" class="nav-link active">Turmas</a>
-      <button class="btn-conta">
-        <img src="img/img_conta.png" alt="Conta">
-      </button>
-      <a href="login.html" class="btn-sair">Sair</a>
-    </nav>
-  </header>
+        <nav class="nav-menu">
+            <a href="#" class="nav-link">Alunos</a>
+            <a href="#" class="nav-link">Professores</a>
+            <a href="#" class="nav-link">Empresas</a>
+            <a href="index.html" class="nav-link active">Turmas</a>
+            <button class="btn-conta">
+                <img src="img/img_conta.png" alt="Conta">
+            </button>
+            <a href="login.html" class="btn-sair">Sair</a>
+        </nav>
+    </header>
 
   <!-- ======= CONTEÚDO ======= -->
   <main id="main-content">
@@ -52,7 +56,7 @@
   </main>
 
   <!-- ======= RODAPÉ ======= -->
-  <footer id="footer"> 
+  <footer id="footer">
     <div class="contactos">
       <h3>Contactos</h3>
       <p>
@@ -76,4 +80,5 @@
   </footer>
 
 </body>
+
 </html>
