--- a/envioEmail.html
+++ b/envioEmail.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GEU — Pedido de estágio: Envio de email</title>
-  <link rel="stylesheet" href="css/envioEmail.css"/>
+  <link rel="stylesheet" href="css/envioEmail.css" />
 </head>
+
 <body>
 
-  <!-- ======= CABEÇALHO ======= -->
-  <header id="header">
-    <div class="header-logo">
-      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
-    </div>
+  <!-- Cabeçalho -->
+    <header id="header">
+        <div class="header-logo">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+            </a>
+        </div>
 
-    <nav class="nav-menu">
-      <a href="#" class="nav-link">Alunos</a>
-      <a href="#" class="nav-link">Professores</a>
-      <a href="#" class="nav-link">Empresas</a>
-      <a href="index.html" class="nav-link active">Turmas</a>
-      <button class="btn-conta">
-        <img src="img/img_conta.png" alt="Conta">
-      </button>
-      <a href="login.html" class="btn-sair">Sair</a>
-    </nav>
-  </header>
+        <nav class="nav-menu">
+            <a href="#" class="nav-link">Alunos</a>
+            <a href="#" class="nav-link">Professores</a>
+            <a href="#" class="nav-link">Empresas</a>
+            <a href="index.html" class="nav-link active">Turmas</a>
+            <button class="btn-conta">
+                <img src="img/img_conta.png" alt="Conta">
+            </button>
+            <a href="login.html" class="btn-sair">Sair</a>
+        </nav>
+    </header>
 
   <!-- ======= CONTEÚDO ======= -->
   <main id="main-content">
 
-    <!-- Abas (iguais a confirmarDados) -->
+    <!-- Abas -->
     <nav class="steps">
       <a class="step" href="confirmarDados.html">Confirmar Dados</a>
       <a class="step" href="escolhaAreaEmpresa.html">Escolha de área e empresa</a>
@@ -50,115 +54,98 @@
 
     <!-- Cartão de dados (key/value como no confirmarDados) -->
     <section class="card">
-    <ul class="kv">
+      <ul class="kv">
         <li>
-        <span class="k">Número de pedido de estágio:</span>
-        <input class="v" value="2400010871" readonly>
+          <span class="k">Número de pedido de estágio:</span>
+          <input class="v" value="2400010871" readonly>
         </li>
 
         <li>
-        <span class="k">Código empresa:</span>
-        <input class="v" value="90012111" readonly>
+          <span class="k">Código empresa:</span>
+          <input class="v" value="90012111" readonly>
         </li>
 
         <li>
-        <span class="k">Nome empresa:</span>
-        <input class="v" value="Web Teq" readonly>
+          <span class="k">Nome empresa:</span>
+          <input class="v" value="Web Teq" readonly>
         </li>
 
         <li>
-        <span class="k">Email:</span>
-        <input class="v" value="webteq@gmail.com" readonly>
+          <span class="k">Email:</span>
+          <input class="v" value="webteq@gmail.com" readonly>
         </li>
 
         <li>
-        <span class="k">Nome do responsável da empresa:</span>
-        <input class="v" value="Rui Alves" readonly>
+          <span class="k">Nome do responsável da empresa:</span>
+          <input class="v" value="Rui Alves" readonly>
         </li>
 
         <li>
-            <span class="k">CV do aluno:</span>
-            <button class="upload-btn" type="button" onclick="openModal()">cv_tpsi_240001087.pdf</button>
+          <span class="k">CV do aluno:</span>
+          <button class="upload-btn" type="button" onclick="openModal()">cv_tpsi_240001087.pdf</button>
         </li>
 
         <li>
-        <span class="k">Estado de envio:</span>
-        <input class="v" value="Enviado" readonly>
+          <span class="k">Estado de envio:</span>
+          <input class="v" value="Enviado" readonly>
         </li>
 
         <li>
-        <span class="k">Data de envio do email:</span>
-        <input class="v" value="21/10/2025 16:02:41 " readonly>
+          <span class="k">Data de envio do email:</span>
+          <input class="v" value="21/10/2025 16:02:41 " readonly>
         </li>
 
 
-    </ul>
+      </ul>
     </section>
 
     <!-- ===== MODAL ===== -->
     <div id="uploadModal" class="modal">
-        <div class="upload-card">
-            <div class="upload-header">
-                <button class="upload-back" type="button" onclick="closeModal()">&#x2039;</button>
-                <h2>Upload</h2>
-            </div>
-
-            <label for="fileInput" class="upload-panel">
-            <div class="upload-cloud">☁</div>
-            <p class="upload-text">Insira o documento que deseja<br>enviar</p>
-            <button class="upload-plus" type="button">+</button>
-            </label>
-
-            <input type="file" id="fileInput" hidden onchange="displayFileName()">
+      <div class="upload-card">
+        <div class="upload-header">
+          <button class="upload-back" type="button" onclick="closeModal()">&#x2039;</button>
+          <h2>Upload</h2>
         </div>
+
+        <label for="fileInput" class="upload-panel">
+          <div class="upload-cloud">☁</div>
+          <p class="upload-text">Insira o documento que deseja<br>enviar</p>
+          <button class="upload-plus" type="button">+</button>
+        </label>
+
+        <input type="file" id="fileInput" hidden onchange="displayFileName()">
+      </div>
     </div>
 
   </main>
 
-    <!-- ======= RODAPÉ ======= -->
-    <footer id="footer"> 
-        <div class="contactos">
-        <h3>Contactos</h3>
-        <p><img src="img/img_email.png" alt="Email"><strong>Email:</strong> geral@ipsantarem.pt</p>
-        <p><img src="img/img_telemovel.png" alt="Telefone"><strong>Telefone:</strong> +351 243 309 520</p>
-        <p><img src="img/img_localizacao.png" alt="Endereço"><strong>Endereço:</strong> Complexo Andaluz, Apartado 279, 2001-904 Santarém</p>
-        </div>
+  <!-- ======= RODAPÉ ======= -->
+  <footer id="footer">
+    <div class="contactos">
+      <h3>Contactos</h3>
+      <p>
+        <img src="img/img_email.png" alt="Email">
+        <strong>Email:</strong> geral@ipsantarem.pt
+      </p>
+      <p>
+        <img src="img/img_telemovel.png" alt="Telefone">
+        <strong>Telefone:</strong> +351 243 309 520
+      </p>
+      <p>
+        <img src="img/img_localizacao.png" alt="Endereço">
+        <strong>Endereço:</strong> Complexo Andaluz, Apartado 279, 2001-904 Santarém
+      </p>
+    </div>
 
-        <div class="logos">
-        <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
-        <img src="img/img_confinanciado.png" alt="Confinanciado">
-        </div>
-    </footer>
+    <div class="logos">
+      <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+      <img src="img/img_confinanciado.png" alt="Confinanciado">
+    </div>
+  </footer>
 
-    <script>
-    function openModal() {
-        document.getElementById("uploadModal").classList.add("show");
-    }
-
-    function closeModal() {
-        document.getElementById("uploadModal").classList.remove("show");
-    }
-
-    // fechar ao clicar fora do cartão
-    window.addEventListener("click", function (e) {
-        const modal = document.getElementById("uploadModal");
-        const card = document.querySelector(".upload-card");
-        if (modal.classList.contains("show") && !card.contains(e.target) && e.target === modal) {
-            closeModal();
-        }
-    });
-
-    // quando escolher o ficheiro, mostra o nome no botão do formulário
-    function displayFileName() {
-        const fileInput = document.getElementById("fileInput");
-        const file = fileInput.files[0];
-        if (file) {
-            document.querySelector(".upload-btn").textContent = file.name;
-            closeModal();
-        }
-    }
-    </script>
+  <script src="js/envioEmail.js"></script>
 
 
 </body>
+
 </html>
