--- a/turma.html
+++ b/turma.html
@@ -19,7 +19,7 @@
     </div>
 
     <nav class="nav-menu">
-      <a href="#" class="nav-link">Alunos</a>
+      <a href="alunos/index.html" class="nav-link">Alunos</a>
       <a href="#" class="nav-link">Professores</a>
       <a href="#" class="nav-link">Empresas</a>
       <a href="index.html" class="nav-link active">Turmas</a>
