--- a/alunos/index.html
+++ b/alunos/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <nav class="nav-menu">
-            <a href="verAlunos.html" class="nav-link active">Alunos</a>
+            <a href="verAluno.html" class="nav-link active">Alunos</a>
             <a href="#" class="nav-link">Professores</a>
             <a href="#" class="nav-link">Empresas</a>
             <a href="../index.html" class="nav-link">Turmas</a>
