--- a/alunos/index.html
+++ b/alunos/index.html
@@ -11,7 +11,7 @@
     <!-- ======= CABEÇALHO ======= -->
     <header id="header">
         <div class="header-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
